@startuml
' configuration
hide circle
skinparam linetype ortho

!define ENTITY_COLOR #ADD1B2
!define ASSIGNMENT_COLOR #E3E3AE

'' TABLES
package "AdminProyectos_BD" {
  class User ENTITY_COLOR {
    * id_user : int <<PK>>
    --
    name : String
    email : String
    password : String
    phone_number : String
    account_status : { ENABLED, DISABLED }
    is_admin : boolean
  }


  class Project ENTITY_COLOR {
    * id_project : int <<PK>>
    --
    title : String
    visibility : { PUBLIC, PRIVATE }
    description : String
    start_date : DateTime
    end_date : DateTime
  }

  class ProjectAssignment ASSIGNMENT_COLOR {
    --
    + id_project : int <<PK, FK>>
    + id_user : int <<PK, FK>>
    role : { OWNER, MEMBER, REVIEWER }
  }


  class Task ENTITY_COLOR {
    + id_task : int <<PK>>
    --
    + id_project : int <<FK>>
    title : String
    description: String
    start_date : DateTime
    end_date : DateTime
    progress_status : { \n\tPENDING,\n\tIN_PROGRESS,\n\tCOMPLETED,\n\tCANCELLED,\n }
  }

  class TaskAssignment ASSIGNMENT_COLOR {
    --
    + id_task : int <<PK, FK>>
    + id_user : int <<PK, FK>>
    role : { OWNER, MEMBER }
  }


  class File ENTITY_COLOR {
    * id_file : int <<PK>>
    --
    name : String
    extension : String
    data : Blob
    size : int
    uploaded_at : DateTime <<auto>>
  }

  class ProjectFile ASSIGNMENT_COLOR {
    --
    + id_project : int <<PK, FK>>
    + id_file : int <<PK, FK>>
  }

  class TaskFile ASSIGNMENT_COLOR {
    --
    + id_task : int <<PK, FK>>
    + id_file : int <<PK, FK>>
  }
}

'' RELATIONSHIPS
ProjectAssignment "0..*" --> "1" User
TaskAssignment "0..*" --> "1" User
ProjectAssignment "0..*" --> "1" Project
Task "0..*" --> "1" Project
ProjectFile "0..*" --> "1" Project
TaskAssignment "0..*" --> "1" Task
TaskFile "0..*" --> "1" Task
ProjectFile "0..*" --> "1" File
TaskFile "0..*" --> "1" File

@enduml
